# promptkit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CRITIQUE-v0.3.0-impl.md  CRITIQUE-v0.3.0.md  KORJAUSSUUNNITELMA-v1.md  LICENSE  PLAN-v0.2.0.md  README.md  REFAKTOROINTI-v2.md  REVIEW-TASK.md  SENIOR-REVIEW-2026-04-03.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docs.yml
archive/planning/: REVIEW-2026-03-13.md  patch_doctor.py  refactor_doctor.py
docs/: contributing.md  index.md
docs/api/: builder.md  cli.md  doctor.md
docs/getting-started/: installation.md  quickstart.md
docs/patterns/: agentic.md  code.md  context.md  defensive.md  index.md  output.md  reasoning.md  review.md
docs/prompts/: code.md  context.md  creative.md  debug.md  defensive.md  education.md  index.md  model-optimized.md  output.md  professional.md  reasoning.md  system.md
patterns/: system-prompt-framing.md  task-decomposition.md  zero-shot-instruction.md
patterns/code/: api-design.md  api-documentation.md  code-explanation.md  comprehensive-code-review.md  tdd-prompting.md  test-documentation.md  test-generation.md
patterns/context/: contextual-prompting.md  few-shot-negatives.md  rag-retrieval.md  session-handoff.md  template-based-prompting.md
patterns/defensive/: chain-of-verification.md  fact-check.md  hallucination-reducer.md  negative-constraints.md
patterns/meta/: meta-prompting.md  prompt-analysis.md
patterns/output/: bullet-list-format.md  json-enforcer.md  markdown-table-format.md  structured-output-enforcement.md
patterns/planning/: architecture-decision-record.md  goal-task-action.md  llm-integration.md  system-design-document.md
patterns/reasoning/: chain-of-thought.md  react-pattern.md  self-consistency.md  step-by-step-analysis.md
patterns/refactoring/: refactoring-documentation.md
patterns/review/: code-review-checklist.md  senior-reviewer.md
patterns/system/: agent-role-definition.md  circuit-breaker.md  context-window-management.md  error-recovery-protocol.md  fallback-chain.md  load-balancing.md  rate-limiting.md  retry-with-backoff.md  self-evaluation-loop.md  tool-selection-heuristics.md  tool-use.md
prompts/code/: code-reviewer.md  developer-relations-consultant.md  digital-art-gallery-guide.md  frontend-developer.md  fullstack-software-developer.md  hypnotherapist.md  it-architect.md  javascript-console.md  linux-terminal.md  senior-engineer.md
prompts/context/: few-shot-with-negatives.md  retrieval-augmented.md  task-decomposition.md
prompts/creative/: acoustic-guitar-composer.md  ascii-artist.md  birthday-message-generator.md  classical-music-composer.md  composer.md  makeup-artist.md  novelist.md  poet.md  rapper.md  scamper.md  stand-up-comedian.md  story-worldbuilding.md  storyteller.md  tech-writer.md
prompts/debug/: bug-risk-analysis.md  comprehensive-repository-analysis-and-bug-fixing-f.md  debugger-extended.md  fix-blank-screen-issues-after-deploy-on-vercel-ang.md  security-fixes.md  sentry-bug-fixer.md  stackoverflow-post.md
prompts/defensive/: act-as-a-resume-reviewer.md  android-update-checker-script-for-pydroid-3.md  comprehensive-web-application-development-with-sec.md  contrarian.md  graduate-level-review-paper-on-humanoid-robots.md  hallucination-reducer.md  manufacturing-workflow-optimization-with-or-tools.md  pull-request-review-assistant.md  refactoring-expert.md  security-auditor.md  trade-contract-review-expert.md  update-checker.md  website-security-vulnerability-checker.md
prompts/education/: instructor-in-a-school.md  life-coach.md  philosophy-teacher.md  public-speaking-coach.md  relationship-coach.md  socratic-teacher.md  spoken-english-teacher-and-improver.md  talent-coach.md  teacher-of-react-js.md  time-travel-guide.md  travel-guide.md
prompts/model-optimized/: README.md
prompts/output/: ai-agent-security-evaluation-checklist.md  ai-customer-support-specialist.md  clean-bibtex-formatter-for-academic-projects.md  diagram-generator.md  excel-sheet.md  hyper-realistic-clay-bust-from-photo-template.md  personal-stylist.md  realistic-food-image-generator.md  seo-specialist.md  structured-json-enforcer.md  ultra-realistic-noir-portrait-creation.md  world-landmarks-hyper-realistic-3d-dioramas.md  xml-framing.md
prompts/professional/: accountant.md  career-coach.md  copywriter.md  interviewer.md  investment-manager.md  legal-advisor.md  product-manager.md  recruiter.md  rephraser-with-obfuscation.md  salesperson.md  seo-auditor.md  social-media-manager.md  startup-tech-lawyer.md
prompts/reasoning/: chain-of-verification.md  creative-branding-strategist.md  (+14 more)
scripts/: generate_docs.py
templates/: pattern-template.md
tests/: run_doctor_manually.py  test_builder.py  test_builder_variables.py  test_cli.py  test_cli_doctor.py  test_cli_doctor_edge_cases.py  test_cli_doctor_edges.py  test_cli_interactive.py  test_config.py  test_config_and_custom.py  test_deep_coverage.py  test_doctor.py  test_doctor_v2.py  test_interactive_prompts.py  test_ml_doctor.py  test_pattern_loader.py  test_pattern_registry.py
(+862 files in other folders)
