[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-promptkit"
version = "0.1.0"
description = "A toolkit for building effective LLM prompts from proven patterns"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Petsku", email = "petteri.a.kosonen@proton.me"},
    {name = "Kuu"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["llm", "prompt", "ai", "gpt", "claude", "prompt-engineering", "prompt-patterns"]

dependencies = [
    "rich>=13.0",
]

[project.optional-dependencies]
tokens = ["tiktoken>=0.5.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
llm-promptkit = "llm_promptkit.cli:main"
promptkit = "llm_promptkit.cli:main"

[project.urls]
Homepage = "https://github.com/Petsku01/promptkit"
Documentation = "https://github.com/Petsku01/promptkit#readme"
Repository = "https://github.com/Petsku01/promptkit"
Issues = "https://github.com/Petsku01/promptkit/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
